noinst_LIBRARIES=libarchCore.a
libarchCore_a_SOURCES=wPRanger_mapInc.cpp wPRanger_mapNoInc.cpp wPRanger_remapInc.cpp \
	wPRanger_remapNoInc.cpp wPRanger_setAttributes.cpp wPRanger_lookup.cpp \
	wPRanger_unmap.cpp wPRanger_getLevelRanges.cpp wPRanger_accessors.cpp \
	wPRanger_convertFlags.cpp \
	tlbControl.cpp \
	gdt.c idt.cpp vectorHandlers.S setjmp.S string.cpp __kexceptionTable.cpp \
	exceptions.cpp x8632_pageFault.cpp x8632_generalProtectionFault.cpp \
	string8.cpp string16.cpp \
	taskContext.cpp cpuid.S msr.S cpuEnumerationIntel.cpp cpuEnumerationAmd.cpp \
	debug.cpp x8632_debugException.cpp x8632_breakpointException.cpp
