noinst_LIBRARIES=libchipsetCore.a
libchipsetCore_a_SOURCES=dedicatedMemoryRegions.cpp i8259a.cpp findTables.cpp \
	irqControl.cpp memoryDetection.cpp vgaTerminal.cpp zkcmCore.cpp \
	cpuDetection.cpp memoryAreas.cpp zkcmIbmPcState.cpp timerControl.cpp \
	rtcmos.cpp isa_busPinMappings.cpp busPinMappings.cpp i8254.cpp \
	udi_init_info.cpp i8254_pit.cpp rs232.cpp chipset_root_devices.cpp
